--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "lindera-cc-cedict"
-version = "1.4.0"
-edition = "2024"
-description = "A Japanese morphological dictionary for CC-CEDICT."
+version.workspace = true
+edition.workspace = true
+description = "A Chinese morphological dictionary for CC-CEDICT."
 documentation = "https://docs.rs/lindera-cc-cedict"
-homepage = "https://github.com/lindera/lindera"
-repository = "https://github.com/lindera/lindera"
+homepage.workspace = true
+repository.workspace = true
 readme = "README.md"
-keywords = ["chinese", "morphological", "dictionary", "cc-cedict"]
-categories = ["text-processing"]
-license = "MIT"
+keywords = ["morphological", "analysis", "dictionary", "cc-cedict", "chinese"]
+categories.workspace = true
+license.workspace = true
 
 [features]
 embedded-cc-cedict = []                    # Embed CC-CEDICT dictionary in the binary
