--- a/lindera-dictionary/Cargo.toml
+++ b/lindera-dictionary/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "lindera-dictionary"
-version = "1.4.0"
-edition = "2024"
-description = "A morphological analysis library."
+version.workspace = true
+edition.workspace = true
+description = "A morphological dictionary library."
 documentation = "https://docs.rs/lindera-dictionary"
-homepage = "https://github.com/lindera/lindera"
-repository = "https://github.com/lindera/lindera"
+homepage.workspace = true
+repository.workspace = true
 readme = "README.md"
-keywords = ["morphological", "analysis", "library"]
-categories = ["text-processing"]
-license = "MIT"
+keywords = ["morphological", "analysis", "dictionary", "library"]
+categories.workspace = true
+license.workspace = true
 
 [features]
 build_rs = ["dep:reqwest"]
