--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "lindera-unidic"
-version = "1.4.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 description = "A Japanese morphological dictionary for UniDic."
 documentation = "https://docs.rs/lindera-unidic"
-homepage = "https://github.com/lindera/lindera"
-repository = "https://github.com/lindera/lindera"
+homepage.workspace = true
+repository.workspace = true
 readme = "README.md"
-keywords = ["japanese", "morphological", "dictionary", "unidic"]
-categories = ["text-processing"]
-license = "MIT"
+keywords = ["morphological", "analysis", "dictionary", "library", "unidic"]
+categories.workspace = true
+license.workspace = true
 
 [features]
 embedded-unidic = []                       # Embed UniDic dictionary in the binary
