--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -1,15 +1,15 @@
 [package]
 name = "lindera"
-version = "1.4.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 description = "A morphological analysis library."
 documentation = "https://docs.rs/lindera"
-homepage = "https://github.com/lindera/lindera"
-repository = "https://github.com/lindera/lindera"
+homepage.workspace = true
+repository.workspace = true
 readme = "README.md"
 keywords = ["morphological", "analysis", "library"]
-categories = ["text-processing"]
-license = "MIT"
+categories.workspace = true
+license.workspace = true
 
 [features]
 embedded-ipadic = [
