--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -201,7 +201,7 @@ jobs:
         run: |
           LINDERA_DICTIONARY_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-dictionary") | .version')
           LINDERA_DICTIONARY_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-dictionary | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_DICTIONARY_VERSIONS} | grep ${LINDERA_DICTIONARY_VERSION} >/dev/null; then
+          if echo "${LINDERA_DICTIONARY_VERSIONS}" | grep -Fx "${LINDERA_DICTIONARY_VERSION}" >/dev/null; then
             echo "lindera-dictionary ${LINDERA_DICTIONARY_VERSION} has already published"
           else
             pushd lindera-dictionary
@@ -216,7 +216,7 @@ jobs:
         run: |
           LINDERA_CC_CEDICT_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-cc-cedict") | .version')
           LINDERA_CC_CEDICT_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-cc-cedict | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_CC_CEDICT_VERSIONS} | grep ${LINDERA_CC_CEDICT_VERSION} >/dev/null; then
+          if echo "${LINDERA_CC_CEDICT_VERSIONS}" | grep -Fx "${LINDERA_CC_CEDICT_VERSION}" >/dev/null; then
             echo "lindera-cc-cedict ${LINDERA_CC_CEDICT_VERSION} has already published"
           else
             pushd lindera-cc-cedict
@@ -231,7 +231,7 @@ jobs:
         run: |
           LINDERA_IPADIC_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-ipadic") | .version')
           LINDERA_IPADIC_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-ipadic | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_IPADIC_VERSIONS} | grep ${LINDERA_IPADIC_VERSION} >/dev/null; then
+          if echo "${LINDERA_IPADIC_VERSIONS}" | grep -Fx "${LINDERA_IPADIC_VERSION}" >/dev/null; then
             echo "lindera-ipadic ${LINDERA_IPADIC_VERSION} has already published"
           else
             pushd lindera-ipadic
@@ -246,7 +246,7 @@ jobs:
         run: |
           LINDERA_IPADIC_NEOLOGD_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-ipadic-neologd") | .version')
           LINDERA_IPADIC_NEOLOGD_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-ipadic-neologd | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_IPADIC_NEOLOGD_VERSIONS} | grep ${LINDERA_IPADIC_NEOLOGD_VERSION} >/dev/null; then
+          if echo "${LINDERA_IPADIC_NEOLOGD_VERSIONS}" | grep -Fx "${LINDERA_IPADIC_NEOLOGD_VERSION}" >/dev/null; then
             echo "lindera-ipadic-neologd ${LINDERA_IPADIC_NEOLOGD_VERSION} has already published"
           else
             pushd lindera-ipadic-neologd
@@ -261,7 +261,7 @@ jobs:
         run: |
           LINDERA_KO_DIC_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-ko-dic") | .version')
           LINDERA_KO_DIC_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-ko-dic | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_KO_DIC_VERSIONS} | grep ${LINDERA_KO_DIC_VERSION} >/dev/null; then
+          if echo "${LINDERA_KO_DIC_VERSIONS}" | grep -Fx "${LINDERA_KO_DIC_VERSION}" >/dev/null; then
             echo "lindera-ko-dic ${LINDERA_KO_DIC_VERSION} has already published"
           else
             pushd lindera-ko-dic
@@ -276,7 +276,7 @@ jobs:
         run: |
           LINDERA_UNIDIC_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-unidic") | .version')
           LINDERA_UNIDIC_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-unidic | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_UNIDIC_VERSIONS} | grep ${LINDERA_UNIDIC_VERSION} >/dev/null; then
+          if echo "${LINDERA_UNIDIC_VERSIONS}" | grep -Fx "${LINDERA_UNIDIC_VERSION}" >/dev/null; then
             echo "lindera-unidic ${LINDERA_UNIDIC_VERSION} has already published"
           else
             pushd lindera-unidic
@@ -291,7 +291,7 @@ jobs:
         run: |
           LINDERA_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera") | .version')
           LINDERA_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_VERSIONS} | grep ${LINDERA_VERSION} >/dev/null; then
+          if echo "${LINDERA_VERSIONS}" | grep -Fx "${LINDERA_VERSION}" >/dev/null; then
             echo "lindera ${LINDERA_VERSION} has already published"
           else
             pushd lindera
@@ -306,7 +306,7 @@ jobs:
         run: |
           LINDERA_CLI_VERSION=$(cargo metadata --no-deps --format-version=1 | jq -r '.packages[] | select(.name=="lindera-cli") | .version')
           LINDERA_CLI_VERSIONS=$(curl -s -XGET https://crates.io/api/v1/crates/lindera-cli | jq -r 'select(.versions != null) | .versions[].num')
-          if echo ${LINDERA_CLI_VERSIONS} | grep ${LINDERA_CLI_VERSION} >/dev/null; then
+          if echo "${LINDERA_CLI_VERSIONS}" | grep -Fx "${LINDERA_CLI_VERSION}" >/dev/null; then
             echo "lindera-cli ${LINDERA_CLI_VERSION} has already published"
           else
             pushd lindera-cli
