--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "1.4.1"
+version = "1.4.2"
 edition = "2024"
 description = "A morphological analysis libraries and command line interface."
 documentation = "https://docs.rs/lindera"
@@ -24,33 +24,33 @@ categories = ["text-processing"]
 license = "MIT"
 
 [workspace.dependencies]
-lindera-dictionary = { version = "1.4.1", path = "lindera-dictionary" }
-lindera-cc-cedict = { version = "1.4.1", path = "lindera-cc-cedict" }
-lindera-ipadic = { version = "1.4.1", path = "lindera-ipadic" }
-lindera-ipadic-neologd = { version = "1.4.1", path = "lindera-ipadic-neologd" }
-lindera-ko-dic = { version = "1.4.1", path = "lindera-ko-dic" }
-lindera-unidic = { version = "1.4.1", path = "lindera-unidic" }
-lindera = { version = "1.4.1", path = "lindera" }
-lindera-cli = { version = "1.4.1", path = "lindera-cli" }
+lindera-dictionary = { version = "1.4.2", path = "lindera-dictionary" }
+lindera-cc-cedict = { version = "1.4.2", path = "lindera-cc-cedict" }
+lindera-ipadic = { version = "1.4.2", path = "lindera-ipadic" }
+lindera-ipadic-neologd = { version = "1.4.2", path = "lindera-ipadic-neologd" }
+lindera-ko-dic = { version = "1.4.2", path = "lindera-ko-dic" }
+lindera-unidic = { version = "1.4.2", path = "lindera-unidic" }
+lindera = { version = "1.4.2", path = "lindera" }
+lindera-cli = { version = "1.4.2", path = "lindera-cli" }
 
 anyhow = "1.0.100"
 bincode = { version = "2.0.1", features = ["serde"] }
 byteorder = "1.5.0"
-clap = { version = "4.5.49", features = ["derive", "cargo"] }
-criterion = { version = "0.7.0", default-features = false, features = [
+clap = { version = "4.5.53", features = ["derive", "cargo"] }
+criterion = { version = "0.8.1", default-features = false, features = [
     "html_reports",
 ] }
-csv = "1.3.1"
+csv = "1.4.0"
 derive_builder = "0.20.2"
 encoding = "0.2.33"
 encoding_rs = "0.8.35"
 encoding_rs_io = "0.1.7"
-flate2 = "1.1.4"
+flate2 = "1.1.5"
 glob = "0.3.3"
 kanaria = "0.2.0"
-log = "0.4.28"
+log = "0.4.29"
 md5 = "0.8.0"
-memmap2 = "0.9.8"
+memmap2 = "0.9.9"
 num_cpus = "1.17.0"
 once_cell = "1.21.3"
 percent-encoding = "2.3.2"
@@ -58,13 +58,13 @@ rand = { version = "0.9.2", default-features = false, features = [
     "small_rng",
 ] } # Specify `default-features` and `features` to support WebAssembly
 regex = "1.12.2"
-reqwest = { version = "0.12.24", features = [
+reqwest = { version = "0.12.26", features = [
     "rustls-tls",
 ], default-features = false } # use rustls-tls instead of native-tls which avoids the need to link openssl
 rucrf = "0.3.3"
 serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
-serde_yaml = "0.9.34"
+serde_yaml_ng = "0.10.0"
 strum = { version = "0.27.2", features = ["derive"] }
 strum_macros = "0.27.2"
 tar = "0.4.44"
@@ -77,7 +77,7 @@ tokio = { version = "1.48.0", features = [
     "io-util",
 ] }
 unicode-blocks = "0.1.9"
-unicode-normalization = "0.1.24"
+unicode-normalization = "0.1.25"
 unicode-segmentation = "1.12.0"
 url = "2.5.7"
 yada = "0.5.1"
