--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -65,7 +65,7 @@ percent-encoding.workspace = true
 regex.workspace = true
 serde.workspace = true
 serde_json.workspace = true
-serde_yaml.workspace = true
+serde_yaml_ng.workspace = true
 strum.workspace = true
 strum_macros.workspace = true
 unicode-blocks.workspace = true
