--- a/lindera-unidic/Cargo.toml
+++ b/lindera-unidic/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lindera-unidic"
-version.workspace = true
-edition.workspace = true
+version = { workspace = true }
+edition = { workspace = true }
 description = "A Japanese morphological dictionary for UniDic."
 documentation = "https://docs.rs/lindera-unidic"
 homepage.workspace = true
@@ -18,7 +18,7 @@ default = ["compress"]
 
 [dependencies]
 anyhow.workspace = true
-bincode.workspace = true
+rkyv.workspace = true
 byteorder.workspace = true
 csv.workspace = true
 once_cell.workspace = true
