--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lindera-cli"
-version.workspace = true
-edition.workspace = true
+version = { workspace = true }
+edition = { workspace = true }
 description = "A morphological analysis CLI."
 documentation = "https://docs.rs/lindera-cli"
 homepage.workspace = true
