--- a/lindera-ipadic-neologd/Cargo.toml
+++ b/lindera-ipadic-neologd/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lindera-ipadic-neologd"
-version.workspace = true
+version = { workspace = true }
 edition.workspace = true
 description = "A Japanese morphological dictionary for IPADIC NEologd."
 documentation = "https://docs.rs/lindera-ipadic-neologd"
@@ -24,7 +24,7 @@ default = ["compress"]
 
 [dependencies]
 anyhow.workspace = true
-bincode.workspace = true
+rkyv.workspace = true
 byteorder.workspace = true
 csv.workspace = true
 once_cell.workspace = true
