--- a/lindera-ko-dic/Cargo.toml
+++ b/lindera-ko-dic/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "lindera-ko-dic"
-version.workspace = true
-edition.workspace = true
+version = { workspace = true }
+edition = { workspace = true }
 description = "A Korean morphological dictionary for Ko-Dic."
 documentation = "https://docs.rs/lindera-ko-dic"
 homepage.workspace = true
@@ -18,7 +18,7 @@ default = ["compress"]
 
 [dependencies]
 anyhow.workspace = true
-bincode.workspace = true
+rkyv.workspace = true
 byteorder.workspace = true
 csv.workspace = true
 once_cell.workspace = true
