--- a/lindera/Cargo.toml
+++ b/lindera/Cargo.toml
@@ -8,8 +8,8 @@ homepage = { workspace = true }
 repository = { workspace = true }
 readme = "README.md"
 keywords = ["morphological", "analysis", "library"]
-categories.workspace = true
-license.workspace = true
+categories = ["morphological", "analysis", "library"]
+license = { workspace = true }
 
 [features]
 embedded-ipadic = [
@@ -55,23 +55,23 @@ train = ["lindera-dictionary/train"] # Enable training functionality
 default = ["compress", "mmap"]
 
 [dependencies]
-anyhow.workspace = true
-byteorder.workspace = true
-csv.workspace = true
-kanaria.workspace = true
-once_cell.workspace = true
-percent-encoding.workspace = true
-regex.workspace = true
-serde.workspace = true
-serde_json.workspace = true
-serde_yaml_ng.workspace = true
-strum.workspace = true
-strum_macros.workspace = true
-unicode-blocks.workspace = true
-unicode-normalization.workspace = true
-unicode-segmentation.workspace = true
-url.workspace = true
-yada.workspace = true
+anyhow = { workspace = true }
+byteorder = { workspace = true }
+csv = { workspace = true }
+kanaria = { workspace = true }
+once_cell = { workspace = true }
+percent-encoding = { workspace = true }
+regex = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+serde_yaml_ng = { workspace = true }
+strum = { workspace = true }
+strum_macros = { workspace = true }
+unicode-blocks = { workspace = true }
+unicode-normalization = { workspace = true }
+unicode-segmentation = { workspace = true }
+url = { workspace = true }
+yada = { workspace = true }
 
 lindera-dictionary = { workspace = true }
 lindera-ipadic = { workspace = true, optional = true }
@@ -82,9 +82,8 @@ lindera-cc-cedict = { workspace = true, optional = true }
 
 
 [dev-dependencies]
-serde_json.workspace = true
-criterion.workspace = true
-once_cell.workspace = true
+serde_json = { workspace = true }
+criterion = { workspace = true }
 
 [[bench]]
 name = "bench_ipadic"
