--- a/lindera-cli/Cargo.toml
+++ b/lindera-cli/Cargo.toml
@@ -8,7 +8,7 @@ homepage = { workspace = true }
 repository = { workspace = true }
 readme = "README.md"
 keywords = ["morphological", "analysis", "cli"]
-categories = ["morphological", "analysis", "cli"]
+categories = { workspace = true }
 license = { workspace = true }
 
 [features]
