Refactor dictionary build process, rename environment variables and feature flags

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -80,15 +80,15 @@ jobs:
       matrix:
         dictionary:
           - name: "lindera-ipadic"
-            feature: "embedded-ipadic"
+            feature: "embed-ipadic"
           - name: "lindera-unidic"
-            feature: "embedded-unidic"
+            feature: "embed-unidic"
           - name: "lindera-ko-dic"
-            feature: "embedded-ko-dic"
+            feature: "embed-ko-dic"
           - name: "lindera-cc-cedict"
-            feature: "embedded-cc-cedict"
+            feature: "embed-cc-cedict"
           - name: "lindera-ipadic-neologd"
-            feature: "embedded-ipadic-neologd"
+            feature: "embed-ipadic-neologd"
     runs-on: ubuntu-latest
     steps:
       - name: Run checkout
@@ -145,28 +145,28 @@ jobs:
           - value: "default"
             package_name: "lindera"
             package_description: "Lindera (no dictionary)"
-          - value: "embedded-ipadic"
+          - value: "embed-ipadic"
             package_name: "lindera-ipadic"
             package_description: "Lindera with Japanese dictionary (IPADIC)"
-          - value: "embedded-ipadic-neologd"
+          - value: "embed-ipadic-neologd"
             package_name: "lindera-ipadic-nelneologd"
             package_description: "Lindera with Japanese dictionary (IPADIC-NEologd)"
-          - value: "embedded-unidic"
+          - value: "embed-unidic"
             package_name: "lindera-unidic"
             package_description: "Lindera with Japanese dictionary (UniDic)"
-          - value: "embedded-ko-dic"
+          - value: "embed-ko-dic"
             package_name: "lindera-ko-dic"
             package_description: "Lindera with Korean dictionary (ko-dic)"
-          - value: "embedded-cc-cedict"
+          - value: "embed-cc-cedict"
             package_name: "lindera-cc-cedict"
             package_description: "Lindera with Chinese dictionary (CC-CEDICT)"
-          - value: "embedded-cjk"
+          - value: "embed-cjk"
             package_name: "lindera-cjk"
             package_description: "Lindera with CJK dictionaries (IPADIC, ko-dic, CC-CEDICT)"
-          - value: "embedded-cjk2"
+          - value: "embed-cjk2"
             package_name: "lindera-cjk2"
             package_description: "Lindera with CJK dictionaries (UniDic, ko-dic, CC-CEDICT)"
-          - value: "embedded-cjk3"
+          - value: "embed-cjk3"
             package_name: "lindera-cjk3"
             package_description: "Lindera with CJK dictionaries (IPADIC NEologd, ko-dic, CC-CEDICT)"
 
