--- a/lindera-cc-cedict/Cargo.toml
+++ b/lindera-cc-cedict/Cargo.toml
@@ -12,7 +12,7 @@ categories = { workspace = true }
 license = { workspace = true }
 
 [features]
-embedded-cc-cedict = []                    # Embed CC-CEDICT dictionary in the binary
+embed-cc-cedict = []                    # Embed CC-CEDICT dictionary in the binary
 compress = ["lindera-dictionary/compress"]
 default = ["compress"]
 
