--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,10 +36,16 @@ jobs:
         platform:
           - runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+          - runner: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
           - runner: macOS-latest
             target: aarch64-apple-darwin
+          - runner: macos-13
+            target: x86_64-apple-darwin
           - runner: windows-latest
             target: x86_64-pc-windows-msvc
+          - runner: windows-latest
+            target: aarch64-pc-windows-msvc
         toolchain: [stable]
     runs-on: ${{ matrix.platform.runner }}
     steps:
@@ -138,12 +144,24 @@ jobs:
             target: x86_64-unknown-linux-gnu
             archive: .zip
             extension: ""
+          - runner: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
+            archive: .zip
+            extension: ""
           - runner: macos-latest
             target: aarch64-apple-darwin
             archive: .zip
             extension: ""
+          - runner: macos-13
+            target: x86_64-apple-darwin
+            archive: .zip
+            extension: ""
           - runner: windows-latest
             target: x86_64-pc-windows-msvc
+            archive: .zip
+            extension: .exe
+          - runner: windows-latest
+            target: aarch64-pc-windows-msvc
             archive: .zip
             extension: .exe
         toolchain: [stable]
