--- a/.github/workflows/regression.yml
+++ b/.github/workflows/regression.yml
@@ -38,10 +38,16 @@ jobs:
         platform:
           - runner: ubuntu-latest
             target: x86_64-unknown-linux-gnu
+          - runner: ubuntu-24.04-arm
+            target: aarch64-unknown-linux-gnu
           - runner: macOS-latest
             target: aarch64-apple-darwin
+          - runner: macos-13
+            target: x86_64-apple-darwin
           - runner: windows-latest
             target: x86_64-pc-windows-msvc
+          - runner: windows-latest
+            target: aarch64-pc-windows-msvc
         toolchain: [stable]
     runs-on: ${{ matrix.platform.runner }}
     steps:
