--- a/.github/workflows/periodic.yml
+++ b/.github/workflows/periodic.yml
@@ -45,6 +45,7 @@ jobs:
             target: x86_64-pc-windows-msvc
           - runner: windows-latest
             target: aarch64-pc-windows-msvc
+            skip_test_run: true
         toolchain: [stable, beta, nightly]
     runs-on: ${{ matrix.platform.runner }}
     steps:
@@ -59,4 +60,4 @@ jobs:
           components: rustfmt, clippy
 
       - name: Run test
-        run: cargo test --target "${{ matrix.platform.target }}" --all-features
+        run: cargo test --target "${{ matrix.platform.target }}" --all-features ${{ matrix.platform.skip_test_run == true && '--no-run' || '' }}
