--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,7 +38,7 @@ jobs:
             target: x86_64-unknown-linux-gnu
           - runner: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
-          - runner: macOS-latest
+          - runner: macos-latest
             target: aarch64-apple-darwin
           - runner: macos-15-intel
             target: x86_64-apple-darwin
